# geoinfer

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: Makefile  api.md  conf.py  index.md
docs/_static/: custom.css
examples/: validate_with_allocator.py
geoinfer/: __init__.py  designs.py  inference.py  io.py  pipeline.py  simulate.py  spatial.py  types.py
geoinfer/tests/: test_inference.py  test_pipeline.py  test_simulate.py  test_spatial.py
geoinference/: __init__.py  designs.py  inference.py  io.py  pipeline.py  simulate.py  spatial.py  types.py
geoinference/tests/: test_inference.py  test_pipeline.py  test_simulate.py  test_spatial.py
