[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoinfer"
version = "0.1.0"
description = "Design-based inference for spatially distributed observation surveys"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
]
keywords = [
    "spatial-statistics", "survey-inference", "design-based",
    "cluster-robust", "geosensing", "street-survey",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
dev = ["ruff>=0.1.0", "mypy>=1.5.0"]

[tool.pytest.ini_options]
testpaths = ["geoinfer/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
