[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[project]
name = "geoinference"
version = "0.1.0"
description = "Design-based inference for spatially distributed observation surveys"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
]
keywords = [
    "spatial-statistics", "survey-inference", "design-based",
    "cluster-robust", "geosensing", "street-survey",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/geosensing/geoinference"
Repository = "https://github.com/geosensing/geoinference"
Documentation = "https://geosensing.github.io/geoinference/"
Issues = "https://github.com/geosensing/geoinference/issues"

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
dev = ["ruff>=0.1.0", "mypy>=1.5.0"]
# The real geo_sampling -> allocator pipeline, used by geoinference.pipeline and the
# validation example. Imported lazily; core geoinference needs none of it.
pipeline = ["allocator", "geo-sampling"]

[tool.uv.build-backend]
module-name = "geoinference"
module-root = ""

[dependency-groups]
dev = ["ruff>=0.1.0", "mypy>=1.5.0", "pandas-stubs", "scipy-stubs"]
test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser>=2.0",
    "linkify-it-py>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["geoinference/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
exclude = ["geoinference/tests/"]

[[tool.mypy.overrides]]
module = ["geoinference.tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["allocator.*", "geo_sampling.*", "scipy.*"]
ignore_missing_imports = true
